<resources>

    <string name="app_name">Not Far From The Tree</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_example">Not Far From The Tree</string>
    <string name="title_activity_cast_list">Casts</string>
    <string name="titled_title">Title</string>
    <string name="titled_description">Description</string>
    <string name="untitled"><i>untitled</i></string>
    <string name="main_tab_whats_new">What\'s new</string>
    <string name="main_tab_collections">Collections</string>
    <string name="main_tab_nearby">Nearby</string>
    <string name="main_tab_unpublished">Unpublished</string>
    <string name="err_unhandled_intent">Error: cannot handle this type of data</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="publish">Publish</string>
    <string name="edit_cast">Edit cast</string>
    <string name="err_saving_cast">Error saving cast.</string>
    <string name="notice_saved">Saved.</string>
    <string name="new_photo">Take photo</string>
    <string name="new_video">Record video</string>
    <string name="pick_media">Pick media</string>
    <string name="err_cast_media_no_activities">Unfortunately, there doesn\'t seem to be a way to play this media on your device.</string>
    <string name="cast_new">New cast</string>
    <string name="err_validate_please_enter_a_title">Please enter a title.</string>
    <string name="this_cast_has_no_media">This cast has no media</string>
    <string name="location_link_no_location">No Location</string>
    <string name="location_link_location_found">Location found</string>
    <string name="location_link_accuracy_meter">±%.0f meters</string>
    <string name="location_link_accuracy_kilometer">±%.01f kilometers</string>
    <string name="delete_cast_media">Delete item</string>
    <string name="delete_cast_media_confirm_message">Delete this item?</string>
    <string name="view_item">View item</string>
    <string name="auth_login_or_register">Login or Register</string>
    <string name="auth_welcome_message">Welcome to Not Far From The Tree\'s Blossom Watch Map!</string>
    <string name="title_activity_cast_list_all">All Casts</string>
    <string name="title_activity_cast_list_tags">%1$s Casts</string>
    <string name="title_activity_cast_list_tags_comma">, </string>
    <string name="title_activity_cast_list_tags_and">and </string>
    <string name="title_activity_cast_list_tags_quote">’%1$s‘</string>

</resources>